--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -16,7 +16,7 @@ RUN apk add --update --no-cache curl ca-certificates \
     supervisor \
     shadow \
     rsync \
-    sqlite3 \
+    sqlite \
     sudo
 
 # trust this project public key to trust the packages.
@@ -44,7 +44,7 @@ RUN apk add --no-cache --update php-fpm@php \
     php-mysqlnd@php \
     php-pdo_mysql@php \
     php-pdo_sqlite@php \
-    php-sqlite@php \
+    php-sqlite3@php \
     php-mbstring@php \
     php-phar@php \
     php-session@php \
