--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -82,10 +82,12 @@ ADD php/php.ini /etc/php7/conf.d/custom.ini
 ADD nginx/app.conf /etc/nginx/conf.d/laravel.conf
 # IF USER_ID IS SET, RECREATE www-data WITH USER_ID:GROUP_ID
 RUN if [ ${USER_ID:-0} -ne 0 ] && [ ${GROUP_ID:-0} -ne 0 ]; then \
+    echo "CONFIGURE CUSTOM USER..." && \ 
     if  getent passwd www-data > /dev/null 2>&1 ; then userdel -f www-data; fi &&\
     if getent group www-data ; then groupdel www-data; fi &&\
     groupadd -g ${GROUP_ID} www-data &&\
     useradd -l -u ${USER_ID} -g www-data www-data &&\
+    mkdir /home/www-data && \
     install -d -m 0755 -o www-data -g www-data /home/www-data &&\
     chown --changes --silent --no-dereference --recursive \
     ${USER_ID}:${GROUP_ID} \
